# tennis_cut

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  spec.md
.github/workflows/: ruff.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/meta/: labled_windows.csv
examples/videos/: tester.json
models/: audio_pop_20250623080658.pth  audio_pop_logmel_large_20260315224218.pth  history_20250720230205.csv  history_logmel_large_20260315224218.csv
src/: convert_to_fast_vid.sh  find_candidates.py  make_windows.py  train_audio_pop.py
src/label_videos/: README.md  convert_to_fast_vid.sh  downsize_vids.sh  label_shots.py  tennis_annotate.py
src/labeling_app/: tennis_annotate.py
src/tennis_cut/: README.md  tennis_cut.py
src/train_pop_detector/: AGENTS.md  README.md  make_windows.py  prepare_audio_windows.py  train_audio_pop.py
src/train_swing_detector/: README.md  prepare_swing_frames.py  train_shot_binary_classifier.py  train_swing_classifier.py
src/utilities/: __init__.py  core.py
