[project]
name = "tennis-cut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "fastai>=2.8.1",
    "fasttransform>=0.0.2",
    "ffmpeg-python>=0.2.0",
    "pandas>=2.2.3",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.0",
    "ruff>=0.11.8",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]
