[project]
name = "tennis-cut"
version = "0.1.0"
description = "Cut up videos of tennis shots to just the shots"
readme = "README.md"
requires-python = ">=3.11.11,<3.12"
dependencies = [
    "fastai>=2.8.1",
    "fasttransform>=0.0.2",
    "ffmpeg-python>=0.2.0",
    "pandas>=2.2.3",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.0",
    "ruff>=0.12.0",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.65.0",
    "ultralytics>=8.1.0",
]

[project.scripts]
tennis-cut = "tennis_cut.tennis_cut:main"